--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -20,7 +20,7 @@ body {
 .navbar {
   padding: 20px;
   background-color: var(--ColorTeal);
-  display: flex;
+  /* display: flex; */
   justify-content: space-between;
   align-items: center;
 }
@@ -61,4 +61,14 @@ a:hover {
 /* a link the moment it is clicked */
 a:active {
   color: var(--ColorLightBlue);
+}
+
+img {
+  border-radius: 5%;
+  border-color: var(--ColorTan);
+  border-style: solid;
+  height: 200px;
+  width: auto;
+  display: block;
+  margin: auto;
 }
