--- a/portfolio/src/components/Navbar/style.css
+++ b/portfolio/src/components/Navbar/style.css
@@ -1,3 +1,16 @@
-nav.navbar.navbar-default {
-  margin-bottom: 0;
+.navbar{
+  display: flex;
+}
+
+.navbar-nav{
+  display: flex;
+  list-style: none;
+  margin-right: 25px;
+}
+
+.nav-item{
+  font-size: 14pt;
+  text-decoration: underline;
+  display: inline-block;
+  margin-left: 25px;
 }
