--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Monoton&family=Montserrat&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css');
 
 :root {
   --ColorDarkBlue: #28363D;
@@ -22,7 +23,7 @@ H2 {
   font-weight: normal;
 }
 
-.navbar {
+.menu {
   padding: 20px;
   background-color: var(--ColorTeal);
   /* display: flex; */
@@ -30,19 +31,19 @@ H2 {
   align-items: center;
 }
 
-.navbar-brand {
+.menu-name {
   font-family: 'Monoton', cursive;
   font-weight: normal;
   font-size: 28pt;
 }
 
-.navbar-nav {
+.menu-options{
   display: flex;
   list-style: none;
   margin-right: 25px;
 }
 
-.navbar-item {
+.menu-item {
   font-size: 14pt;
   text-decoration: underline;
   display: inline-block;
@@ -72,6 +73,11 @@ a:active {
   color: var(--ColorGreen);
 }
 
+.projectSection a:active,
+.projectSection a:hover{
+  color: var(--ColorLightBlue);
+}
+
 img {
   border-radius: 5%;
   border-color: var(--ColorTan);
@@ -80,4 +86,19 @@ img {
   width: auto;
   display: block;
   margin: auto;
+}
+
+.education{
+  margin: 25px;
+  display: flex;
+  border: solid;
+  border-color: var(--ColorGreen);
+  border-radius: 10%;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.school{
+  margin: 20px;
 }
