--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Monoton&family=Montserrat&display=swap');
-@import url('https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css');
+/* @import url('https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css'); */
+@import url('https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css');
 
 :root {
   --ColorDarkBlue: #28363D;
@@ -78,15 +79,20 @@ a:active {
   color: var(--ColorLightBlue);
 }
 
-img {
-  border-radius: 5%;
-  border-color: var(--ColorTan);
-  border-style: solid;
-  height: 200px;
+.projectSection{
+  display: flex;
+}
+
+.projectPic{
+  max-height: 200px;
+  width: auto;
+}
+
+/* img {
   width: auto;
   display: block;
   margin: auto;
-}
+} */
 
 .education{
   margin: 25px;
