--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -97,7 +97,6 @@ a:active {
 .projects h2{
   margin: 25px;
   font-size: 24pt;
-  text-align: center;
 }
 
 .description{
@@ -124,10 +123,26 @@ a:active {
   align-items: center;
 }
 
+.education h2,
+.professional h2{
+  margin-left: 20px;
+  margin-right: 30px;
+}
+
 .school{
   margin: 20px;
-  width: 30%;
+  width: 35%;
 }
+
+.school p{
+  margin: 0;
+}
+
+.schoolName{
+  font-weight: bold;
+  font-size: 16pt;
+}
+
 .professional{
   margin: 25px;
   display: flex;
